# bias_correction

./: .gitignore  dockerfile  dockerfile_dev  dockerfile_test  gaussiandem_N5451_dx30_xi800_sigma71_r000.txt  gaussianu_N5451_dx30_xi800_sigma71_r000.txt  plotting.py  pyproject.toml  ref_epsg2154_coords_arome_alp.nc  requirements.txt  setup.py  sync_dezm.sh  sync_sxcen.sh
bias_correction/: dem.py
bias_correction/plots/: test_gr_downscale.py  test_plots.py  utils.py
bias_correction/postprocessing/: arome_interpolation.py  test_arome_interpolation.py
bias_correction/train/: unet.py
scripts/: downscale_season.py
tasks/: 20240308_downscale_october_missing.py  20240308_downscale_season_end_season.py  20240308_downscale_season_for_matthieu_v.py  20240308_extract_arome.py
tasks/20240308_downscale_mvernay/: downscale_end_season.py  downscale_season.py  extract_arome.py  missing_values_october.py
tasks/20240709_downscale_ange_grandmaison/: 1_compute_corrections.py  2_sanity_checks.py  3_reextract_dem.py  4_compute_corrections_again.py  5_sanity_checks.py  6_prepare_data.py  7_arome_downscaling.py  7_arome_interpolation.py  8_check_downscaled_wind.py  README.md
