[project]
name = "bias-correction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "netcdf4==1.6.1",
    "numpy==1.24.3",
    "pandas==1.5.1",
    "scikit-learn==1.3.2",
    "tensorflow-addons==0.21",
    "tensorflow==2.10.0",
    "xarray==2022.10.0",
    "matplotlib==3.7.5",
]
